Add storage management

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,12 @@
 molecule:
   image: gwerlas/molecule
   services:
-    - docker:20.10-dind
+    - name: docker:20.10-dind
+      variables:
+        DOCKER_CLIENT_TIMEOUT: "240"
+        COMPOSE_HTTP_TIMEOUT: "240"
   script: molecule test -s docker
   timeout: 2h
-  variables:
-    DOCKER_CLIENT_TIMEOUT: "240"
-    COMPOSE_HTTP_TIMEOUT: "240"
   rules:
     - if: $CI_COMMIT_BRANCH
       changes:
