--- a/molecule/desktop/molecule.yml
+++ b/molecule/desktop/molecule.yml
@@ -9,7 +9,11 @@ driver:
 platforms:
   - name: archlinux
     box: archlinux/archlinux
-    provider_raw_config_args: &raw_config
+    interfaces: &interfaces
+      - auto_config: true
+        network_name: private_network
+        type: dhcp
+    provider_raw_config_args: &provider
       - "cpu_mode = 'host-passthrough'"
       - "disk_bus = 'virtio'"
       - "nic_model_type = 'virtio'"
@@ -18,42 +22,61 @@ platforms:
       - "storage :file, bus: 'virtio', cache: 'writeback'"
     instance_raw_config_args:
       - 'vm.provision :shell, inline: "pacman -Syu --noconfirm git net-tools python3 sudo unzip which"'
+      - 'vm.disk :disk, size: "1GB", name: "vdb"'
   - name: debian12
     box: debian/testing64
-    provider_raw_config_args: *raw_config
+    interfaces: *interfaces
+    provider_raw_config_args: *provider
+    instance_raw_config_args: &instance
+      - 'vm.disk :disk, size: "1GB", name: "vdb"'
   - name: el8
     box: generic/centos8s
     memory: 2048
-    provider_raw_config_args: *raw_config
+    interfaces: *interfaces
+    provider_raw_config_args: *provider
+    instance_raw_config_args: *instance
   - name: el9
     box: generic/centos9s
     memory: 2048
-    provider_raw_config_args: *raw_config
+    interfaces: *interfaces
+    provider_raw_config_args: *provider
+    instance_raw_config_args: *instance
   - name: fedora36
     box: generic/fedora36
     memory: 2048
-    provider_raw_config_args: *raw_config
+    interfaces: *interfaces
+    provider_raw_config_args: *provider
+    instance_raw_config_args: *instance
   - name: fedora37
     box: generic/fedora37
     memory: 2048
-    provider_raw_config_args: *raw_config
+    interfaces: *interfaces
+    provider_raw_config_args: *provider
+    instance_raw_config_args: *instance
   # Sandbox fail to compile, investigating later
   # - name: gentoo
   #   box: generic/gentoo
   #   cpus: 4
   #   memory: 8192
+  #   interfaces: *interfaces
   #   provider_raw_config_args:
   #     - "cpu_mode = 'host-passthrough'"
   #     - "nic_model_type = 'virtio'"
   #     - "video_type = 'virtio'"
   #     - "disk_driver :cache => 'writeback'"
   #     - "storage :file, bus: 'virtio', cache: 'writeback'"
+  #   instance_raw_config_args: *instance
   - name: ubuntu2210
     box: generic/ubuntu2210
     memory: 2048
-    provider_raw_config_args: *raw_config
+    interfaces: *interfaces
+    provider_raw_config_args: *provider
+    instance_raw_config_args: *instance
 lint: ansible-lint
 provisioner:
   name: ansible
+  inventory:
+    links:
+      group_vars: inventory/group_vars
 verifier:
   name: ansible
