--- a/defaults/main/feature-flipping.yml
+++ b/defaults/main/feature-flipping.yml
@@ -1,12 +1,14 @@
 ---
-# Feature flipping
 system_manage_sudo: "{{ 'container' not in ansible_virtualization_tech_guest }}"
 system_manage_hosts: "{{ system_hosts | length > 0 }}"
 system_manage_proxies: "{{ system_http_proxy is defined or system_https_proxy is defined or system_ftp_proxy is defined }}"
-system_manage_networks: false
+system_manage_networks: "{{ system_networks_interfaces | length > 0 }}"
 system_manage_time: "{{ 'container' not in ansible_virtualization_tech_guest }}"
-
-# Shared variables
-system_bin_path: /usr/local/bin
-system_profile: server
-system_retries: 2
+system_manage_storages: |
+  {{
+    (
+      system_storages_partitions +
+      system_storages_vg +
+      system_storages_lvol
+    ) | length > 0
+  }}
