--- a/tasks/package-managers/portage-pre.yml
+++ b/tasks/package-managers/portage-pre.yml
@@ -1,4 +1,34 @@
 ---
+- name: Portage - Check for equery
+  ansible.builtin.stat:
+    path: /usr/bin/equery
+  register: system_bin_equery
+
+- name: Portage - Gentoolkit
+  when: not system_bin_equery.stat.exists
+  block:
+    - name: Portage - Gentoolkit - Check the manifest
+      ansible.builtin.stat:
+        path: "{{ system_portage_directory }}/app-portage/gentoolkit/Manifest"
+      register: system_portage_manifest_equery
+
+    - name: Portage - Gentoolkit - Manual emerge sync
+      when: not system_portage_manifest_equery.stat.exists
+      become: true
+      ansible.builtin.command:
+        cmd: emerge --sync
+      register: result
+      changed_when: result.stdout | regex_search('Number of files. (\\d+)', '\\1') | first | int > 1
+
+    - name: Package - Gentoolkit - Package
+      become: true
+      environment:
+        PYTHON_TARGETS: python{{ ansible_python.version.major }}_{{ ansible_python.version.minor }}
+      ansible.builtin.command:
+        cmd: emerge app-portage/gentoolkit
+      register: result
+      changed_when: result.stdout | regex_findall('>>> Installing') | length > 0
+
 - name: Portage - Deployer admin in portage group
   when: ansible_user_id != 'root'
   become: true
@@ -72,6 +102,12 @@
   loop_control:
     loop_var: system_portage_configuration_directory
 
+- name: Portage - Get installed Python versions
+  ansible.builtin.command:
+    cmd: equery -q list -F '$slot' dev-lang/python
+  changed_when: false
+  register: equery
+
 - name: Portage - Configuration parameters
   become: true
   ansible.builtin.lineinfile:
@@ -83,7 +119,7 @@
     - regex: ^USE_PYTHON=
       state: absent
     - regex: ^PYTHON_TARGETS=
-      state: absent
+      line: PYTHON_TARGETS="{{ ['python'] | product(equery.stdout_lines | map('replace', '.', '_')) | map('join') | join(' ') }}"
   loop_control:
     loop_var: system_portage_make_param
   notify: emerge --newuse
@@ -101,31 +137,3 @@
   loop_control:
     loop_var: system_portage_use_file
   notify: emerge --newuse
-
-- name: Portage - Check for equery
-  ansible.builtin.stat:
-    path: /usr/bin/equery
-  register: system_bin_equery
-
-- name: Portage - Gentoolkit
-  when: not system_bin_equery.stat.exists
-  block:
-    - name: Portage - Gentoolkit - Check the manifest
-      ansible.builtin.stat:
-        path: "{{ system_portage_directory }}/app-portage/gentoolkit/Manifest"
-      register: system_portage_manifest_equery
-
-    - name: Portage - Gentoolkit - Manual emerge sync
-      when: not system_portage_manifest_equery.stat.exists
-      become: true
-      ansible.builtin.command:
-        cmd: emerge --sync
-      register: result
-      changed_when: result.stdout | regex_search('Number of files. (\\d+)', '\\1') | first | int > 1
-
-    - name: Package - Gentoolkit - Package
-      become: true
-      ansible.builtin.command:
-        cmd: emerge app-portage/gentoolkit
-      register: result
-      changed_when: result.stdout | regex_findall('>>> Installing') | length > 0
