--- a/tasks/package-managers/portage-pre.yml
+++ b/tasks/package-managers/portage-pre.yml
@@ -1,139 +1,11 @@
 ---
-- name: Portage - Check for equery
-  ansible.builtin.stat:
-    path: /usr/bin/equery
-  register: system_bin_equery
-
-- name: Portage - Gentoolkit
-  when: not system_bin_equery.stat.exists
-  block:
-    - name: Portage - Gentoolkit - Check the manifest
-      ansible.builtin.stat:
-        path: "{{ system_portage_directory }}/app-portage/gentoolkit/Manifest"
-      register: system_portage_manifest_equery
-
-    - name: Portage - Gentoolkit - Manual emerge sync
-      when: not system_portage_manifest_equery.stat.exists
-      become: true
-      ansible.builtin.command:
-        cmd: emerge --sync
-      register: result
-      changed_when: result.stdout | regex_search('Number of files. (\\d+)', '\\1') | first | int > 1
-
-    - name: Package - Gentoolkit - Package
-      become: true
-      environment:
-        PYTHON_TARGETS: python{{ ansible_python.version.major }}_{{ ansible_python.version.minor }}
-      ansible.builtin.command:
-        cmd: emerge app-portage/gentoolkit
-      register: result
-      changed_when: result.stdout | regex_findall('>>> Installing') | length > 0
-
-- name: Portage - Deployer admin in portage group
-  when: ansible_user_id != 'root'
-  become: true
-  ansible.builtin.user:
-    name: "{{ ansible_user_id }}"
-    append: true
-    groups:
-      - portage
-
-- name: Portage - Reset SSH connection
-  ansible.builtin.meta: reset_connection
-
-- name: Portage - Load initial config
-  register: system_portage_config_initial
-  ansible.builtin.slurp:
-    src: /etc/portage/make.conf
-
-- name: Portage - Cache
-  block:
-    - name: Portage - Cache - Configuration parameter
-      become: true
-      ansible.builtin.lineinfile:
-        path: /etc/portage/make.conf
-        line: "PORTDIR=\"{{ system_portage_directory }}\""
-        regex: ^PORTDIR=
-        group: portage
-        mode: "0664"
-      notify: cache update
-
-    - name: Portage - Cache - Predefined Portage directory
-      ansible.builtin.set_fact:
-        system_portage_directory_matches: "{{ system_portage_config_initial.content | b64decode | regex_findall('(?<!#)PORTDIR=\"(.+)\"') }}"
-
-    - name: Portage - Cache - Initial portage directory
-      when: system_portage_directory_matches | length > 0
-      block:
-        - name: Portage - Cache - Portdir - Fact
-          ansible.builtin.set_fact:
-            cacheable: true
-            system_portage_directory_initial: "{{ system_portage_directory_matches | last }}"
-
-        - name: Portage - Cache - Portdir - Move old directory to the new path
-          when: system_portage_directory_initial != system_portage_directory
-          become: true
-          block:
-            - name: Portage - Cache - Portdir - Parent directory
-              ansible.builtin.file:
-                path: "{{ system_portage_directory | dirname }}"
-                state: directory
-                mode: "0755"
-
-            - name: Portage - Cache - Portdir - Move data
-              ansible.builtin.command:
-                cmd: "mv '{{ system_portage_directory_initial }}' '{{ system_portage_directory }}'"
-              changed_when: true
-
-            - name: Portage - Cache - Portdir - Profile symlink repair
-              ansible.builtin.import_tasks: "{{ role_path }}/tasks/package-managers/portage-profile.yml"
-
-- name: Portage - Configuration directories
-  become: true
-  ansible.builtin.file:
-    path: "{{ system_portage_configuration_directory }}"
-    state: directory
-    group: portage
-    mode: "0775"
+- name: Portage - Preparations before emere --sync
+  ansible.builtin.include_tasks: "{{ role_path }}/tasks/package-managers/portage/{{ portage_task }}.yml"
   loop:
-    - /etc/portage/
-    - /etc/portage/package.license
-    - /etc/portage/package.use
+    - permissions
+    - cache
+    - profile
+    - equery
+    - use-flags
   loop_control:
-    loop_var: system_portage_configuration_directory
-
-- name: Portage - Get installed Python versions
-  ansible.builtin.command:
-    cmd: equery -q list -F '$slot' dev-lang/python
-  changed_when: false
-  register: equery
-
-- name: Portage - Configuration parameters
-  become: true
-  ansible.builtin.lineinfile:
-    path: /etc/portage/make.conf
-    line: "{{ system_portage_make_param.line | default(omit) }}"
-    regex: "{{ system_portage_make_param.regex }}"
-    state: "{{ system_portage_make_param.state | default(omit) }}"
-  loop:
-    - regex: ^USE_PYTHON=
-      state: absent
-    - regex: ^PYTHON_TARGETS=
-      line: PYTHON_TARGETS="{{ ['python'] | product(equery.stdout_lines | map('replace', '.', '_')) | map('join') | join(' ') }}"
-  loop_control:
-    loop_var: system_portage_make_param
-  notify: emerge --newuse
-
-- name: Portage - Packages features flipping (use flags)
-  ansible.builtin.copy:
-    src: "package.use/{{ system_portage_use_file }}"
-    dest: "/etc/portage/package.use/{{ system_portage_use_file }}"
-    owner: "{{ ansible_user_id }}"
-    group: portage
-    mode: "0664"
-  loop:
-    - kernel
-    - python
-  loop_control:
-    loop_var: system_portage_use_file
-  notify: emerge --newuse
+    loop_var: portage_task
