--- a/defaults/main/feature-flipping.yml
+++ b/defaults/main/feature-flipping.yml
@@ -1,9 +1,9 @@
 ---
-system_manage_sudo: "{{ 'container' not in ansible_virtualization_tech_guest }}"
+system_manage_sudo: "{{ not in_container }}"
 system_manage_hosts: "{{ system_hosts | length > 0 }}"
 system_manage_proxies: "{{ system_http_proxy is defined or system_https_proxy is defined or system_ftp_proxy is defined }}"
 system_manage_networks: "{{ system_networks_interfaces | length > 0 }}"
-system_manage_time: "{{ 'container' not in ansible_virtualization_tech_guest }}"
+system_manage_time: "{{ not in_container }}"
 system_manage_storages: |
   {{
     (
