--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -1,30 +1,34 @@
 ---
 - name: Packages - Load variables
   when: packages is undefined
-  ansible.builtin.import_tasks: "{{ role_path }}/tasks/vars.yml"
+  ansible.builtin.import_tasks: "{{ role_path }}/tasks/facts.yml"
 
 - name: Packages - Package manager preparation
   ansible.builtin.include_tasks:
-    file: "{{ item }}"
+    file: "{{ pkg_task }}"
   with_first_found:
     - files:
         - "{{ ansible_pkg_mgr }}-pre.yml"
         - empty.yml
       paths:
         - "{{ role_path }}/tasks/package-managers"
+  loop_control:
+    loop_var: pkg_task
 
 - name: Packages - Update
   ansible.builtin.import_tasks: "{{ role_path }}/tasks/packages/update.yml"
 
 - name: Packages - Package managers post update
   ansible.builtin.include_tasks:
-    file: "{{ item }}"
+    file: "{{ pkg_task }}"
   with_first_found:
     - files:
         - "{{ ansible_pkg_mgr }}-post.yml"
         - empty.yml
       paths:
         - "{{ role_path }}/tasks/package-managers"
+  loop_control:
+    loop_var: pkg_task
 
 - name: Packages - Debug
   ansible.builtin.debug:
