--- a/tasks/packages/update.yml
+++ b/tasks/packages/update.yml
@@ -11,8 +11,17 @@
     cmd: needs-update
   register: result
   failed_when: result.rc > 1
-  changed_when: result.rc == 1
-  notify: cache update
+  changed_when: false
 
-- name: Packages - Cache update
-  ansible.builtin.meta: flush_handlers
+- name: Packages - DB update
+  when: result.rc == 1
+  ansible.builtin.include_tasks:
+    file: "{{ upd_task }}"
+  with_first_found:
+    - files:
+        - "{{ ansible_pkg_mgr }}.yml"
+        - other.yml
+      paths:
+        - "{{ role_path }}/tasks/packages/update"
+  loop_control:
+    loop_var: upd_task
