--- a/tasks/facts.yml
+++ b/tasks/facts.yml
@@ -9,12 +9,12 @@
       paths:
         - "{{ role_path }}/vars"
   loop:
+    - "{{ ansible_service_mgr }}.yml"                                                     # systemd
     - "{{ ansible_os_family | lower }}-like.yml"                                          # debian-like,  redhat-like, etc.
     - "{{ ansible_distribution | lower }}.yml"                                            # debian,       fedora,      ubuntu
     - "{{ ansible_os_family | lower }}{{ ansible_distribution_major_version }}-like.yml"  # redhat7-like
     - "{{ ansible_distribution | lower }}{{ ansible_distribution_major_version }}.yml"    # debian10
     - "{{ ansible_distribution | lower }}-{{ ansible_distribution_release | lower }}.yml" # ubuntu-bionic
-    - "{{ ansible_service_mgr }}.yml"                                                     # openrc
   loop_control:
     loop_var: vars_file
 
