--- a/molecule/switches/molecule.yml
+++ b/molecule/switches/molecule.yml
@@ -63,18 +63,18 @@ platforms:
     box: generic/centos8s
     memory: 2048
     provider_raw_config_args: *raw_config
-  # - name: centos9s
-  #   box: generic/centos9s
-  #   memory: 2048
-  #   provider_raw_config_args: *raw_config
+  - name: centos9s
+    box: generic/centos9s
+    memory: 2048
+    provider_raw_config_args: *raw_config
   - name: alma8
     box: almalinux/8
     memory: 2048
     provider_raw_config_args: *raw_config
-  # - name: alma9
-  #   box: almalinux/9
-  #   memory: 2048
-  #   provider_raw_config_args: *raw_config
+  - name: alma9
+    box: almalinux/9
+    memory: 2048
+    provider_raw_config_args: *raw_config
 lint: ansible-lint
 provisioner:
   name: ansible
