--- a/molecule/timesync/molecule.yml
+++ b/molecule/timesync/molecule.yml
@@ -18,16 +18,16 @@ platforms:
       - "storage :file, bus: 'virtio', cache: 'writeback'"
     instance_raw_config_args:
       - 'vm.provision :shell, inline: "pacman -Syu --noconfirm git net-tools python3 sudo unzip which"'
+
+  # Debian like
+  - name: debian10
+    box: debian/buster64
+    provider_raw_config_args: *raw_config
   - name: debian11
     box: debian/bullseye64
     provider_raw_config_args: *raw_config
-  - name: el8
-    box: generic/centos8s
-    memory: 2048
-    provider_raw_config_args: *raw_config
-  - name: el9   # https://bugzilla.redhat.com/show_bug.cgi?id=1970865
-    box: generic/centos9s
-    memory: 2048
+  - name: debian12
+    box: debian/testing64
     provider_raw_config_args: *raw_config
   - name: ubuntu1804
     box: generic/ubuntu1804
@@ -44,6 +44,17 @@ platforms:
     box: generic/ubuntu2210
     memory: 2048
     provider_raw_config_args: *raw_config
+
+  # RedHat like
+  - name: centos8s
+    box: generic/centos8s
+    memory: 2048
+    provider_raw_config_args: *raw_config
+  # https://bugzilla.redhat.com/show_bug.cgi?id=1970865
+  # - name: centos9s
+  #   box: generic/centos9s
+  #   memory: 2048
+  #   provider_raw_config_args: *raw_config
 lint: ansible-lint
 provisioner:
   name: ansible
